# LichtFeld-Studio

./: .gitignore  README.md
.github/workflows/: nightly.yml
docker/: docker-compose.yml
src/app/: mcp_gui_tools.cpp
src/app/include/app/: mcp_app_utils.hpp
src/core/: logger.cpp  path_utils.hpp
src/core/include/core/: logger.hpp  parameters.hpp
src/core/tensor/internal/: tensor_expr_impl.hpp  tensor_functors.hpp
src/io/: pipelined_image_loader.cpp
src/io/formats/: transforms.cpp
src/io/include/io/: pipelined_image_loader.hpp
src/mcp/: mcp_server.cpp  shared_scene_tools.cpp
src/python/: python_runtime.cpp  python_runtime.hpp
src/python/lfs/: module.cpp  py_keymap.cpp  py_ui.cpp  py_ui_panels.cpp
src/python/lfs_plugins/: image_preview_panel.py  plugin_marketplace_panel.py  scene_panel.py  training_panel.py
src/python/lfs_plugins/overlays/: __init__.py
src/python/stubs/lichtfeld/: __init__.pyi  animation.pyi  app.pyi  io.pyi  keymap.pyi  log.pyi  mcp.pyi  mesh.pyi  ops.pyi  packages.pyi  plugins.pyi  scene.pyi  scripts.pyi  selection.pyi  undo.pyi
src/python/stubs/lichtfeld/pipeline/: __init__.pyi  edit.pyi  select.pyi  transform.pyi  undo.pyi
src/python/stubs/lichtfeld/ui/: __init__.pyi  action.pyi  key.pyi  mod.pyi  mouse.pyi  ops.pyi  rml.pyi  signals.pyi
src/rendering/: CMakeLists.txt  camera_frustum_renderer.cpp  camera_frustum_renderer.hpp  rendering_engine_impl.cpp  rendering_engine_impl.hpp
src/rendering/include/rendering/: rendering.hpp
src/rendering/rasterizer/rasterization/include/: kernels_forward.cuh
src/rendering/rasterizer/rasterization/src/: forward.cu
src/training/rasterization/: edge_rasterizer.cpp
src/training/strategies/: mrnf.cpp
src/visualizer/: CMakeLists.txt  visualizer_impl.cpp  visualizer_impl.hpp
src/visualizer/gui/: async_task_manager.cpp  gui_manager.cpp  rml_menu_bar.cpp  rml_right_panel.cpp  rml_sequencer_overlay.cpp  rml_sequencer_overlay.hpp  rml_viewport_overlay.cpp  scene_panel_native.cpp  scene_panel_native.hpp  sequencer_ui_manager.cpp  sequencer_ui_manager.hpp  string_keys.hpp
src/visualizer/gui/editor/: python_editor.cpp  python_editor.hpp
src/visualizer/gui/resources/locales/: de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  nl.json  pl.json  zh.json
src/visualizer/gui/rmlui/: rml_panel_host.cpp  rmlui_gl3_backend.cpp  rmlui_gl3_backend.hpp  rmlui_render_interface.cpp  rmlui_render_interface.hpp
src/visualizer/gui/rmlui/elements/: scene_graph_element.cpp
src/visualizer/gui/rmlui/resources/: components.rcss  menubar.rcss  plugin_marketplace.rcss  right_panel.rcss  scene_tree.rcss  scene_tree.rml  sequencer_overlay.rcss  sequencer_overlay.rml  statusbar.rcss  training.rcss  training.rml
src/visualizer/gui/utils/: native_file_dialog.cpp  native_file_dialog.hpp
src/visualizer/input/: input_bindings.cpp  input_controller.cpp  input_router.cpp  input_router.hpp
src/visualizer/internal/: resource_paths.hpp
src/visualizer/rendering/: image_texture_loader.cpp  image_texture_loader.hpp  rendering_manager.cpp  rendering_manager.hpp  rendering_manager_frame.cpp
src/visualizer/scene/: scene_manager.cpp
src/visualizer/selection/: selection_service.cpp  selection_service.hpp
src/visualizer/sequencer/: rml_sequencer_panel.cpp  rml_sequencer_panel_timeline.cpp
tests/: test_colmap_image_layout.cpp  test_input_controller_focus.cpp  test_python_integration.cpp
tests/python/: test_import_dialog_panels.py  test_unicode_path_bindings.py
